<?xml version="1.0" encoding="UTF-8"?>
<!--
 Copyright 2013 The Android Open Source Project

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

     http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
-->

<resources>
        <string name="sample_action">Clear Text</string>
        <string name="airaction_label_scroll_down">Scroll down</string>
        <string name="airaction_label_scroll_up">Scroll up</string>
        <string name="airaction_label_next_chapter">Next chapter</string>
        <string name="airaction_label_previous_chapter">Previous chapter</string>
        <string name="airaction_label_show_info_page">Show info page</string>
        <string name="airaction_label_read">Start reading (from info page)</string>
</resources>
