<?xml version="1.0" encoding="utf-8"?>
<remote-actions
    actionset_label="@string/app_name"
    enable_key="SamsungIssuedIdentifier"
    version="1.2">
    <action
        id="scroll_down"
        label="@string/airaction_label_scroll_down"
        priority="1"
        repeatable="true"
        repeatable_interval="100"
        trigger_key="PAGE_DOWN">
        <preference
            name="gesture"
            value="click|swipe_down" />
    </action>
    <action
        id="scroll_up"
        label="@string/airaction_label_scroll_up"
        priority="3"
        repeatable="true"
        repeatable_interval="100"
        trigger_key="PAGE_UP">
        <preference
            name="gesture"
            value="double_click|swipe_up" />
    </action>
    <action
        id="next_chapter"
        label="@string/airaction_label_next_chapter"
        priority="2"
        repeatable="true"
        repeatable_interval="long"
        trigger_key="DPAD_RIGHT">
        <preference
            name="gesture"
            value="swipe_right" />
    </action>
    <action
        id="previous_chapter"
        label="@string/airaction_label_previous_chapter"
        priority="4"
        repeatable="true"
        repeatable_interval="long"
        trigger_key="DPAD_LEFT">
        <preference
            name="gesture"
            value="swipe_left" />
    </action>
    <action
        id="show_info_page"
        label="@string/airaction_label_show_info_page"
        priority="5"
        repeatable="false"
        trigger_key="MOVE_HOME">
        <preference
            name="gesture"
            value="circle_ccw" />
    </action>
    <action
        id="read"
        label="@string/airaction_label_read"
        priority="6"
        repeatable="false"
        trigger_key="MOVE_END">
        <preference
            name="gesture"
            value="circle_cw" />
    </action>
</remote-actions>